<resources>
    <string name="app_name">Lar &amp; Financas</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_page_rodape_msg">Ao utilizar o Lar &amp; Financas, você esta de acordo
        com nossos termos de Uso e Politica de Privacidade</string>

    <!-- Backdrop menu labels -->
    <string name="item_dashboard">Painel</string>
    <string name="item_receitas">Receitas</string>
    <string name="item_despesas">Despesas</string>
    <string name="item_conta">Conta</string>
    <string name="item_categorias">Categorias</string>
    <string name="item_perfil">Perfil</string>

    <!-- Dashboard Strings -->
    <string name="dash_saldo">Saldo</string>
    <string name="dash_receita">Receita</string>
    <string name="dash_despesa">Despesa</string>
    <string name="menu_mes_comp">Selecione o mês</string>
    <string name="dash_pagamento">Pagamentos</string>
    <string name="dash_pago">Pago</string>
    <string name="dash_pendentes">Pendentes</string>
    <string name="dash_vencidas">Vencidas</string>
    <string name="dash_em_aberto">Em Aberto</string>
    <string name="dash_agendado">Agendado</string>
    <string name="dash_saldo_previsto">Saldo Previsto</string>
    <string name="dash_pgproximo">Pagamento Proximo</string>
    <string name="dash_balanco">Balanço Mensal</string>
    <string name="dash_btn_agendar">Agendar</string>

    <!-- Pagamento -->
    <string name="extrato_name">Extrato</string>
    <string name="extrato_mes">Mês: </string>
    <string name="extrato_saldo">Saldo Atual</string>

    <!-- Menu -->
    <string name="menu_receita">Nova Receita</string>
    <string name="menu_despesa">Nova Despesa </string>
    <string name="menu_agendar">Agendar</string>

    <!-- Receita -->
    <string name="receita_desc">Descrição</string>
    <string name="receita_comp">Competência </string>
    <string name="receita_data">Data</string>
    <string name="receita_valor">Valor</string>>
    <string name="receita_switch">Pago</string>
    <string name="receita_pagamento">Data do Pagamento</string>
    <string name="receita_vpagamento">Valor Pago</string>
    <string name="receita_btn">Salvar</string>

    <!-- Extrato -->
    <string name="extrato_desc">Descrição</string>
    <string name="extrato_tipo">Movimentação </string>
    <string name="extrato_data">Data Pagamento</string>
    <string name="extrato_valor">Valor</string>>



    <!-- Produto String -->
    <string name="produto_titulo">Nome</string>
    <string name="produto_descricao">Descrição</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>