<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.LarFinanca.Button.TextButton"
        android:id="@+id/backdrop_painel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_dashboard" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.LarFinanca.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_receitas" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.LarFinanca.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_despesas" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.LarFinanca.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_conta" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.LarFinanca.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_categorias" />

    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.LarFinanca.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_perfil" />

</merge>