<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dash_id_saldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textAlignment="center"
            android:text="@string/dash_saldo"
            android:layout_marginBottom="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dash_id_despesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="115dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/dash_despesa" />

            <TextView
                android:id="@+id/dash_id_receita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="70dp"
                android:layout_toStartOf="@id/dash_id_despesa"
                android:layout_toLeftOf="@id/dash_id_despesa"
                android:text="@string/dash_receita" />

        </RelativeLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
