<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.ExtratoFragment">
    <!-- Card Receita e Despesa -->
    <androidx.cardview.widget.CardView
    android:id="@+id/cardViewReD"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="5dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:elevation="12dp"
    app:cardCornerRadius="8dp"
    app:cardPreventCornerOverlap="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cardMesComp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/extrato_id_desc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/extrato_desc"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.144"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/extrato_id_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="15dp"
            android:text="R$ 0,00"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/extrato_id_desc_title"
            app:layout_constraintStart_toStartOf="@+id/extrato_id_desc_title"
            app:layout_constraintTop_toBottomOf="@+id/extrato_id_desc_title" />

        <TextView
            android:id="@+id/despesa_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/extrato_valor"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.84"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/extrato_id_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="15dp"
            android:text="R$ 0,00"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/despesa_title"
            app:layout_constraintStart_toStartOf="@+id/despesa_title"
            app:layout_constraintTop_toBottomOf="@+id/despesa_title" />

        <TextView
            android:id="@+id/extrato_title_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/extrato_data"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/extrato_id_desc"
            app:layout_constraintStart_toStartOf="@+id/extrato_id_desc"
            app:layout_constraintTop_toBottomOf="@+id/extrato_id_desc" />

        <TextView
            android:id="@+id/extrato_id_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="15dp"
            android:text="R$ 0,00"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/extrato_title_data"
            app:layout_constraintStart_toStartOf="@+id/extrato_title_data"
            app:layout_constraintTop_toBottomOf="@+id/extrato_title_data" />

        <TextView
            android:id="@+id/extrato_title_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/extrato_tipo"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/extrato_id_valor"
            app:layout_constraintStart_toStartOf="@+id/extrato_id_valor"
            app:layout_constraintTop_toBottomOf="@+id/extrato_id_valor" />

        <TextView
            android:id="@+id/extrato_id_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="15dp"
            android:text="R$ 0,00"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/extrato_title_tipo"
            app:layout_constraintStart_toStartOf="@+id/extrato_title_tipo"
            app:layout_constraintTop_toBottomOf="@+id/extrato_title_tipo" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>